daniel_escobar/session01/exercise01/mariadb-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mariadb
  namespace: exercise-01
  labels:
    app: mariadb
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
        - image: bitnami/mariadb:latest
          name: mariadb
          ports:
          - containerPort: 3306
            name: dbport
