daniel_escobar/session01/exercise01/wordpress-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: wordpress
  namespace: exercise-01
  labels:
    app: wordpress
    type: frontend
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: wordpress
        type: frontend

    spec:
      containers:
      - image: bitnami/wordpress:latest        
        name: wordpress
        ports:
        - name: http
          containerPort: 80
