daniel_escobar/session01/exercise01/wordpress-svc.yaml
apiVersion: "v1"
kind: "Service"
metadata:
  name: frontend
  namespace: exercise-01
  labels:
    app: wordpress
    type: frontend
spec:
  type: NodePort
  ports:
  - name: http-svc
    port: 80
    targetPort: http
  selector: 
    app: wordpress
    type: frontend
